--- a/docs/src/content/docs/plugins/canvas-controls/index.mdx
+++ b/docs/src/content/docs/plugins/canvas-controls/index.mdx
@@ -14,24 +14,30 @@ The Canvas Controls plugin provides navigation controls for the infinite canvas 
   <CanvasControlsExample client:only="vue" />
 </ExampleContainer>
 
-<Code code={CanvasControlsExampleRaw} lang="vue" title="CanvasControlsExample.vue" />
-
-Use the scroll wheel to pan. Hold Ctrl/Cmd and scroll to zoom. Use the Hand tool or middle mouse button to drag-pan with momentum.
-
-## Installation
-
-```bash
-npm install @woven-canvas/plugin-canvas-controls
-```
+- Scroll wheel to pan
+- Ctrl/Cmd + scroll to zoom
+- Hand tool or middle mouse to drag-pan with momentum
 
 ## Usage
 
-```typescript
-import { CanvasControlsPlugin } from '@woven-canvas/plugin-canvas-controls'
+The Canvas Controls plugin is included by default when using `WovenCanvas`. To configure it:
 
-const editor = new Editor(element, {
-  plugins: [CanvasControlsPlugin()]
-})
+```vue
+<template>
+  <WovenCanvas
+    :plugin-options="{
+      controls: { minZoom: 0.1, maxZoom: 5 }
+    }"
+  />
+</template>
+```
+
+To disable it:
+
+```vue
+<template>
+  <WovenCanvas :plugin-options="{ controls: false }" />
+</template>
 ```
 
 ## Options
@@ -87,7 +93,7 @@ editor.nextTick((ctx) => {
 ```
 
 For more camera control examples, see:
-- [Controlling the Canvas](/examples/controlling-canvas/)
+- [Using the Editor API](/examples/editor-api/)
 - [Zoom to Fit](/examples/zoom-to-fit/)
 - [Lock Camera](/examples/lock-camera/)
 
@@ -97,15 +103,17 @@ The Vue package provides the Hand tool for toolbar integration:
 
 ```vue
 <script setup lang="ts">
-import { HandTool, SelectTool, Toolbar } from '@woven-canvas/vue'
+import { WovenCanvas, HandTool, SelectTool, Toolbar } from '@woven-canvas/vue'
 </script>
 
 <template>
   <WovenCanvas>
-    <Toolbar>
-      <SelectTool />
-      <HandTool />
-    </Toolbar>
+    <template #toolbar>
+      <Toolbar>
+        <SelectTool />
+        <HandTool />
+      </Toolbar>
+    </template>
   </WovenCanvas>
 </template>
 ```
