--- a/docs/src/content/docs/examples/create-a-custom-block/index.mdx
+++ b/docs/src/content/docs/examples/create-a-custom-block/index.mdx
@@ -63,7 +63,6 @@ The slot `#button:sticker` only appears when all selected blocks have the Sticke
 
 ## Related
 
-- [Custom Block](/examples/custom-block/) — Block definition options
-- [Custom Tool](/examples/custom-tool/) — Tool lifecycle and options
-- [Custom Floating Menu](/examples/custom-floating-menu/) — Menu customization
-- [Plugin](/examples/plugin/) — Package into a reusable plugin
+- [Using the Editor API](/examples/editor-api/) — Programmatically read and update canvas state
+- [Create a Plugin](/examples/create-a-plugin/) — Package custom behavior into a reusable plugin
+- [Plugins](/learn/plugins/) — Plugin structure, systems, commands, and keybinds
