--- a/docs/src/content/docs/examples/editor-api/index.mdx
+++ b/docs/src/content/docs/examples/editor-api/index.mdx
@@ -25,3 +25,9 @@ Manipulate the contents of the canvas using the editor API.
 </Tabs>
 
 This example creates shapes on mount using the `@ready` event. The `Palette` component demonstrates `useEditorContext()` to access the editor from a child component, using `defineQuery` to find all shapes and `Shape.write()` to update their fill colors.
+
+## Related
+
+- [Create a Custom Block](/examples/create-a-custom-block/) — Build and render custom block types
+- [Create a Plugin](/examples/create-a-plugin/) — Add commands, systems, and keybinds
+- [Core Plugin](/plugins/core/) — Camera, input, and foundational ECS systems
