--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -95,7 +95,7 @@ Fully customize every aspect of the canvas. Replace built-in blocks with your ow
 
 ## Read the Docs
 
-- [Quick Start](/quick-start/) — Install and render your first canvas
+- [Quick Start](/quick-start/) — Create your first Woven Canvas app
 - [Architecture](/learn/architecture/) — Understand the core architecture
-- [Blocks](/learn/blocks/) — How canvas elements work
-- [Custom Block Example](/examples/custom-block/) — Build your own block type
+- [Using the Editor API](/examples/editor-api/) — Interact with the canvas using the editor API
+- [Create a Custom Block](/examples/create-a-custom-block/) — Build your own block type
