--- a/docs/src/content/docs/plugins/canvas-controls/index.mdx
+++ b/docs/src/content/docs/plugins/canvas-controls/index.mdx
@@ -92,10 +92,8 @@ editor.nextTick((ctx) => {
 })
 ```
 
-For more camera control examples, see:
+For another camera control example, see:
 - [Using the Editor API](/examples/editor-api/)
-- [Zoom to Fit](/examples/zoom-to-fit/)
-- [Lock Camera](/examples/lock-camera/)
 
 ## Vue Components
 
