add style to docs

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -36,7 +36,9 @@ import { WovenCanvas } from '@woven-canvas/vue'
 </script>
 
 <template>
-  <WovenCanvas />
+  <WovenCanvas
+    style="width: 100%; height: 100vh"
+  />
 </template>
 ```
   </div>
@@ -58,7 +60,7 @@ import { WovenCanvas } from '@woven-canvas/vue'
 
   .demo-code {
     position: relative;
-    max-width: 390px;
+    max-width: 390;
   }
 
   .demo-code pre,
