--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,7 +1,10 @@
 ---
 title: Woven Canvas
-description: A highly customizable infinite canvas SDK for Vue
+description: An infinite canvas SDK built for Vue. Create whiteboards, design tools, and collaborative apps with Woven Canvas.
 template: splash
+head:
+  - tag: title
+    content: Woven Canvas
 hero:
   title: An infinite canvas SDK built for Vue.
   tagline: Create whiteboards, design tools, and collaborative apps with Woven Canvas
