make plugins peer dependencies

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -29,7 +29,7 @@ import HomepageExample from './HomepageExample.vue';
 <div class="demo-section">
   <div class="demo-code">
 ```bash
-npm install @woven-canvas/core @woven-canvas/vue
+npm install @woven-canvas/vue
 ```
 
 ```vue
